tests/samples/negative/types/noncopy_path_copy.ax
module noncopy_path_copy;

import std.core.result as result;
import std.fs.path as path;

fn run() -> result::Result<i32, i32> {
    var first: path::Path = path::Path.from_str("/tmp/owned")?;
    var second: path::Path = first;
    second.destroy();
    return Result.ok(0);
}

fn main() -> i32 {
    return match run() {
        .ok(code) => code,
        .err(code) => code,
    };
}
